--- a/WebContent/css/admin/promotion/event/list.css
+++ b/WebContent/css/admin/promotion/event/list.css
@@ -1,83 +1,107 @@
-.main h1 {
-    font-size: 20px;
-    margin-top: 30px;
+.body {
+    width:1400px;
 }
-
-.main .list-board > table {
-    border-top: 2px solid #5F0080;
-    --border-collapse: collapse;
-    --border-spacing: 5px 10px;
-    width: 1100px;
-    table-layout: fixed;
-    font-size: 14px;
-    margin-top: 10px;
-}
-
-    .main .list-board > table > thead {
-        background: #f5f5f5;
-    }
-
-        .main .list-board > table tr {
-            height: 40px;
-            line-height: 40px;
-        }
-
-            .main .list-board > table td {
-                border-bottom: 1px solid #e9e9e9;
-                text-align: center;
-            }
-
-            .main .list-board > table td.col-s { 
-                width: 60px;
-            }
-
-            .main .list-board > table td.col-m { 
-                width: 130px;
-            }
-
-            .main .list-board > table td.text-left {
-                text-align: left;
-            }
-
-            .main .list-board > table td.event-ing {
-                font-weight: bold;
-                color: #fc0453;
-            }
-
-            .main .list-board > table td.event-end {
-                font-weight: bold;
-            }
-
-            .main .list-board > table .btn-delete > td{
-                text-align: right;
-                padding-right: 15px;
-                border-bottom: none;
-            }
-.main .pager-container {
-    display: flex;
-    justify-content: center;
-}
-
-    .main .pager-container .pager-list {
-        display: flex;
-    }
-
-        .main .pager-container .pager-list li {
-            margin-left: 15px;
-        }
-
-        .main .pager-container .pager-list li:last-child {
-            margin-right: 15px;
-        }
-
-        .main .pager-container .pager-list li a {
-            text-decoration: none;
-        }
-
-        .main .pager-container .pager-list li a:hover {
-            color: #5F0080;
-        }
-
-    .main .pager-container .btn a {
-        text-decoration: none;
-    }
+	
+	.main .sub-container {
+		margin-left: 30px;
+	}	
+		.main h1 {
+		    font-size: 20px;
+		    margin-top: 30px;
+		}
+		
+		.main .list-board > table {
+		    border-top: 2px solid #5F0080;
+		    --border-collapse: collapse;
+		    --border-spacing: 5px 10px;
+		    width: 1000px;
+		    table-layout: fixed;
+		    font-size: 14px;
+		    margin-top: 10px;
+		}
+		
+		    .main .list-board > table > thead {
+		        background: #f5f5f5;
+		    }
+		
+		        .main .list-board > table tr {
+		            height: 40px;
+		            line-height: 40px;
+		        }
+		
+		            .main .list-board > table td {
+		                border-bottom: 1px solid #e9e9e9;
+		                text-align: center;
+		            }
+		
+		            .main .list-board > table td.col-s { 
+		                width: 60px;
+		            }
+		
+		            .main .list-board > table td.col-m { 
+		                width: 130px;
+		            }
+		
+		            .main .list-board > table td.text-left {
+		                text-align: left;
+		            }
+		            
+		            .main .list-board > table td.text-short {
+		            	text-overflow:ellipsis; 
+		            	overflow:hidden; 
+		            	white-space:nowrap;
+		            }
+		
+		            .main .list-board > table td.event-ing {
+		                font-weight: bold;
+		                color: #fc0453;
+		            }
+		
+		            .main .list-board > table td.event-end {
+		                font-weight: bold;
+		            }
+		
+		            .main .list-board > table td.btn-row {
+		                text-align: right;
+		                --padding-right: 15px;
+		                border-bottom: none;
+		            }
+		            
+		            .main .list-board > table td.no-border {
+		                border-bottom: none;
+		            }
+		            
+		.main .pager-container {
+		    display: flex;
+		    justify-content: center;
+		    margin-top: 20px;
+		}
+		
+		    .main .pager-container .pager-list {
+		        display: flex;
+		    }
+		
+		        .main .pager-container .pager-list li {
+		            margin-left: 15px;
+		        }
+		
+		        .main .pager-container .pager-list li:last-child {
+		            margin-right: 15px;
+		        }
+		        
+		        .main .pager-container .pager-list .active-page {
+		            color: #fc0453;
+		            font-weight: bold;
+		        }
+		
+		        .main .pager-container .pager-list li a {
+		            text-decoration: none;
+		        }
+		
+		        .main .pager-container .pager-list li a:hover {
+		            color: #fc0453;
+		        }
+		
+		    .main .pager-container .btn a {
+		        text-decoration: none;
+		    }
