--- a/WebContent/css/admin/accommodations/list.css
+++ b/WebContent/css/admin/accommodations/list.css
@@ -1,72 +1,47 @@
-
-    /********************************************/
-.main h1 {
+.main .sub-container h1 {
     font-size: 20px;
-    margin: 30px 0 0 0;
+    margin: 30px 0 0 30px;
+}
+.main .sub-container .AccTypeCatagory{
+    margin: 30px 0 0 30px;
 }
 
-    .sub-container {
-        width: 1200px;
-        --background: cornflowerblue;
-        margin: 0 auto;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+.main .list-board > table {
+    border-top: 2px solid #5F0080;
+    --border-collapse: collapse;
+    --border-spacing: 5px 10px;
+    width: 700px;
+    table-layout: fixed;
+    font-size: 14px;
+    margin: 10px 0 0 30px;
+}
+
+    .main .list-board > table > thead {
+        background: #f5f5f5;
     }
 
-        .main .breadcrumb{
-            align-self: flex-end;
-        }
-            .main .breadcrumb > .breadcrumb-list {
-                display: flex;
-                justify-content: flex-end;
-                margin-right: 30px;
-                margin-top: 30px;
-                font-size: 14px;
-        
-            }
-     
-        .main .list-board>table{
-            border-top: 2px solid #5f005f;
-            table-layout: fixed;
-            width: 800px;
-            font-size: 14px;
-            margin: 10px 0 0 0px;
+        .main .list-board > table tr {
+            height: 40px;
+            line-height: 40px;
         }
 
-            .main .list-board > table > thead {
-                background: #f5f5f5;
+            .main .list-board > table td {
+                border-bottom: 1px solid #e9e9e9;
+                text-align: center;
             }
 
-                .main .list-board >table tr{
-                    height: 40px;
-                    line-height: 40px;  
-                }
-            
-                    .main .list-board >table tr td{
-                        text-align: center;
-                        border-bottom: 1px solid #e9e9e9;
-                        
-                    }
-                    .main .list-board>table tr td.col-s{
-                        width: 60px;
-                    }
-                    .main .list-board > table td.col-sm { 
-                        width: 100px;
-                    }
-                    .main .list-board>table tr td.col-m{
-                        width: 200px;
-                    }
-                    .main .list-board > table .btn-delete>td{
-                        text-align: right;
-                        padding-right: 15px;
-                        border-bottom: none;
-                        
-                    }
-                    .main .list-board > table .btn-delete input[type=submit]{
-                        width: 80px;
-                        height: 25px;
-                        margin: 0 5px 0 5px;
-                    }
-       
-/********************************************/
+            .main .list-board > table td.col-s { 
+                width: 50px;
+            }
+
+            .main .list-board > table td.col-sm { 
+                width: 100px;
+            }
+
+            .main .list-board > table td.col-m { 
+                width: 150px;
+            }
+            .main .list-board > table tbody tr:last-child >td{
+                border-bottom: 1px solid #ffffff;
+            }
+
