--- a/WebContent/css/admin/notice/detail.css
+++ b/WebContent/css/admin/notice/detail.css
@@ -75,5 +75,13 @@
                         width: 80px;
                         height: 25px;
                         margin: 0 5px 0 5px;
+                         border:1px solid #000000;
+                          border-radius: 4px;
                     }
+                     .main .reg-form > div .btn-cancel {
+                     	display:inline-block;
+                   		text-decoration:none;
+                     	background: #EFEFEF;
+                     	 font-size :15.5px;
+                     }
 /********************************************/
