--- a/WebContent/css/admin/notice/edit.css
+++ b/WebContent/css/admin/notice/edit.css
@@ -65,15 +65,28 @@
                         }
 
                     .main .reg-form > div {
-                        width: 800pxpx;
+                        width: 800px;
                         margin: 10px 0 0 30px;
                         text-align: center;
+                        
                     }
 
                     .main .reg-form > div .btn-submit,
                     .main .reg-form > div .btn-cancel {
+                    	
                         width: 80px;
                         height: 25px;
                         margin: 0 5px 0 5px;
+                        border:1px solid #000000;
+                        border-radius: 4px;
+                       
                     }
+                     .main .reg-form > div .btn-cancel {
+                     	display:inline-block;
+                   		text-decoration:none;
+                     	background: #EFEFEF;
+                     	 font-size :15.5px;
+                     }
+                    
+                    
 /********************************************/
