--- a/WebContent/css/admin/userInfo/list.css
+++ b/WebContent/css/admin/userInfo/list.css
@@ -64,7 +64,7 @@
         display: flex;
         justify-content: flex-end;
     }
-    .user-info-btn>input{
+    .user-info-btn input{
         width: 100px;
         font-size: 50px;
         line-height: 50px;
