--- a/WebContent/css/jun.css
+++ b/WebContent/css/jun.css
@@ -39,14 +39,14 @@ html, body{
 .header_index>.header_h1{
     flex-basis: 50px;
     height:70%;
-    background: url(../../../../틈로고index.png) 0 0 no-repeat;
+    background: url(../images/틈로고index.png) 0 0 no-repeat;
     text-indent: -9999px;
     background-size: 50px auto;
 }
 .header>.header_h1{
     flex-basis: 50px;
     height:70%;
-    background: url(../../../../틈로고.png) 0 0 no-repeat;
+    background: url(../images/틈로고.png) 0 0 no-repeat;
     text-indent: -9999px;
     background-size: 50px auto;
 }
