--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -241,6 +241,15 @@ header li{
         width: 80px;
         margin-bottom: 20px;
     }
+/*-------------offer------------*/
+.sec-offer-page{
+display: flex;
+}
+    .offer-kaTalk{
+        height: 1000px;
+        width: 300px;
+    }
+
 
 /*-------------event------------*/
 .sec-event-page {
