--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -214,7 +214,7 @@ header li{
 
 /*-------------event------------*/
 .sec-event-page {
-    background: #f7f7f7;
+    background: #F9FBFF;
 }
 
     .event-sec {
