--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -122,7 +122,7 @@ header li{
                 display: flex;
                 margin: 5px;
             }
-   
+
         .promotion-sec .promotion-item{
             align-items: center;
             background-color: #ffffff;
@@ -214,11 +214,63 @@ header li{
 /*-------------offer------------*/
 .sec-offer-page{
 display: flex;
+justify-content: center;
+height: 972px;
 }
-    .offer-kaTalk{
-        height: 1000px;
-        width: 300px;
+    .offer-katalk{
+        width: 600px;
+        padding-top: 72px;
     }
+        .offer-katalk img{
+            width: 600px;
+            height: 900px;
+            
+        }
+        .offer-box{
+            width: 550px;
+            height: 900px;
+            display: flex;
+                flex-wrap: wrap;
+                align-content:flex-start ;
+                justify-content: center;
+                padding-top: 72px;
+        }
+            .offer-ment{
+                height: 430px;
+                margin-top: 200px;
+                display: flex;
+                flex-wrap: wrap;
+                align-content:flex-start ;
+                justify-content: center;
+                
+            }
+                .offer-ment .ment{
+                    font-size: 50px;
+                    font-weight: bold;
+                    
+                }
+                    .offer-ment .teum{
+                        color: #5f0081;
+                    }
+            .offer-button{
+                margin-left: auto;
+                margin-right: auto;
+                border: 1px solid green;
+                width: 350px;
+                height: 97px;
+            }
+            .btn-container .btn-list {
+                
+                background-color: #5f0081;
+                border-radius: 10px;
+                border: none;
+                display: inline-block;
+                cursor: pointer;
+                color: #ffffff;
+                padding: 16px 60px;
+                text-decoration: none;
+                font-size: 30px;
+            }
 
 
 /*-------------event------------*/
