--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -15,6 +15,9 @@ header li{
 /*-------------메인페이지용 헤더------------*/
 .sec-header-page{
     background: white;
+    position: sticky;
+    top: 0;
+    z-index: 10;
 }
 .header-sec{
     display: flex;
