--- a/WebContent/css/event/list.css
+++ b/WebContent/css/event/list.css
@@ -9,7 +9,6 @@ header li{
     list-style: none;
 }
 
-/*-------------메인페이지용 헤더------------*/
 .sec-header-page{
     background: white;
     position: sticky;
@@ -53,14 +52,9 @@ header li{
     position: relative;
 }
 
-/* ----------------메가메뉴----------------- */
-.main-menu > li {
-    overflow: hidden;
-}
-
 .sec-header-page .mega-menu{
     position: absolute;
-    border: 1px solid rgb(160, 160, 160);
+    border: 1px solid rgb(223, 223, 223);
     border-top: none;
     background-color: white;
     --margin-top: 15px;
@@ -68,14 +62,28 @@ header li{
     opacity: 0;
     transition: opacity .25s ease .1s;
 }
+.sec-header-page .mega-menu ul li{
+	height: 0;
+	overflow: hidden;
+	padding: 0;
+	transition: height .25s ease .1s;
+}
 
     .sec-header-page .mypage:hover .mega-menu{
         opacity: 1;
+
+    }
+
+    .sec-header-page .mypage:hover .mega-menu ul li {
+        height: 36px;
         overflow: visible;
+        padding: 0;
     }
 
         .sec-header-page .mega-menu a{
             color: #5f0081;
+            font-size: 14px;
+            font-weight: none;
         }
 
 /*---------- 헤더 검색 -----------*/
@@ -95,17 +103,16 @@ header li{
     .container {
         width: 1200px;
         min-height: 500px;
-        margin: 0 auto;
-        padding-top: 30px;
+        margin:0 auto;
         display: flex;
+        padding-top: 30px;
     }
 
         .aside {
-            border: 1px solid rgb(209, 196, 196);
-            border-radius: 5px;
             width: 300px;
             height: 330px;
             margin-top: 70px;
+            padding-left: 40px;
         }
 
             .aside > h1 {
@@ -120,8 +127,19 @@ header li{
             }
 
             .aside li {
-                padding-top: 10px;
+                height:60px;
+                padding-top: 20px;
+                padding-bottom: 10px;
                 font-size: 20px;
+                transform: scale(1);
+                transition: transform 0.1s;
+                
+            }
+            .aside li:hover {
+                border-bottom:1px solid #fc0453;
+                transform: scale(1.03);
+                color:#fc0453;
+                font-weight: bold;
             }
 
             .aside .active {
@@ -148,17 +166,14 @@ header li{
             }
             
             .event-sec > h1 {
-                font-size: 30px;
                 width: 500px;
                 font-weight: bold;
-                font-size: 30px;
+                font-size: 28px;
                 margin: 50px 0 30px 0;
             }
 
             .event-sec > .event-list {
                 display: flex;
-                --border: 1px solid #c5c7c9;
-                --border-radius: 5px;
                 color: #888888;
             }
 
@@ -170,6 +185,10 @@ header li{
                     line-height: 40px;
                     background: #F2F2F8;
                 }
+
+                    .event-sec > .event-list > li > a {
+                        display: block;
+                    }
 
                 .event-sec > .event-list > .current-tab {
                     border-top: 3px solid #FC0453;
