--- a/WebContent/css/notice/list.css
+++ b/WebContent/css/notice/list.css
@@ -1,9 +1,102 @@
-* {
-    box-sizing: border-box;
-}
+
 .d-none{
     display: none;
 }
+/********************************************/
+header h1{
+    margin: 0;
+    height: 100%;
+}
+
+header li{
+    color: white;
+    list-style: none;
+}
+
+.sec-header-page{
+    background: white;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+}
+.header-sec{
+    display: flex;
+    background: white;
+    height: 72px;
+    width: 1200px;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 auto;
+}
+    .header-sec a {
+        --height: 50%;
+        display: block;
+        text-align: center;
+        padding: .5rem 1rem;
+        text-decoration: none;
+        color: #5f0081;
+        font-weight: bold;
+    }
+
+    .header-sec>.header-logo{
+        flex-basis: 50px;
+        height:70%;
+        background: url(/images/ 틈index.png) 0 0 no-repeat;
+        text-indent: -9999px;
+        background-size: 50px auto;
+    }
+        .header-sec>.header-logo .teum-logo{
+            box-sizing: border-box;
+            height: 100%;
+        } 
+
+.main-menu{
+    display: flex;
+    margin: 0;
+    position: relative;
+}
+
+.sec-header-page .mega-menu{
+    position: absolute;
+    border: 1px solid rgb(223, 223, 223);
+    border-top: none;
+    background-color: white;
+    --margin-top: 15px;
+    right: -12px;
+    opacity: 0;
+    transition: opacity .25s ease .1s;
+}
+.sec-header-page .mega-menu ul li{
+   height: 0;
+   overflow: hidden;
+   padding: 0;
+   transition: height .25s ease .1s;
+}
+
+    .sec-header-page .mypage:hover .mega-menu{
+        opacity: 1;
+
+    }
+
+    .sec-header-page .mypage:hover .mega-menu ul li {
+        height: 36px;
+        overflow: visible;
+        padding: 0;
+    }
+
+        .sec-header-page .mega-menu a{
+            color: #5f0081;
+            font-size: 14px;
+            font-weight: none;
+        }
+        /*********************headserch*****************/
+.header_search{        
+    display: flex;
+}
+    .header_search>input{
+        padding: 8px 16px 8px 16px;
+        width: 100px;
+    }
 
 /********************************************/
 
@@ -13,12 +106,51 @@
     --background: orange;
     margin: 0 auto;
     display: flex;
+     padding-top: 30px;
 }
 
-    .aside {
-        background: palegreen;
-        width: 300px;
-    }
+     .aside {
+            width: 300px;
+            height: 330px;
+            margin-top: 70px;
+            padding-left: 40px;
+        }
+
+            .aside > h1 {
+                font-size: 24px;
+                font-weight: bold;
+                padding: 10px 0 0 20px;
+            }
+
+            .aside > ul {
+                width: 200px;
+                padding: 10px 0 0 40px;
+            }
+
+            .aside li {
+                height:60px;
+                padding-top: 20px;
+                padding-bottom: 10px;
+                font-size: 20px;
+                transform: scale(1);
+                transition: transform 0.1s;
+                
+            }
+            .aside li:hover {
+                border-bottom:1px solid #fc0453;
+                transform: scale(1.03);
+                color:#fc0453;
+                font-weight: bold;
+            }
+
+            .aside .active {
+                font-weight: bold;
+                color: #fc0453;
+            }
+
+                .aside li > a {
+                    text-decoration: none;
+                }
 
     .main {
         width: 900px;
